--- a/app/views/org_public/walkrightup/show.html.haml
+++ b/app/views/org_public/walkrightup/show.html.haml
@@ -30,7 +30,7 @@
                 %strong
                   #{appointment.display_name}
               - else
-                = appointment.first_display_name
+                = appointment.public_display_name
               - if appointment.status == "paging"
                 %span.text-warning #{current_organization.short_name} is ready for them!
               - elsif appointment.status == "on_deck"
