--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -35,6 +35,7 @@
                 = link_to "Organized", '/rails/mailers/organized_mailer' , role: "button", class: "btn btn-light dropdown-item"
                 = link_to "Admin", '/rails/mailers/admin_mailer' , role: "button", class: "btn btn-light dropdown-item"
                 = link_to "Customer", '/rails/mailers/customer_mailer' , role: "button", class: "btn btn-light dropdown-item"
+                = link_to "Appointments", '/rails/mailers/appointments_mailer' , role: "button", class: "btn btn-light dropdown-item"
 
         - if admin_nav_display_view_all
           = link_to admin_nav_select_link_active[:path], class: "nav-link text-muted em" do
