--- a/app/views/org_public/virtual_line/index.html.haml
+++ b/app/views/org_public/virtual_line/index.html.haml
@@ -1,3 +1,4 @@
+-# TODO translations
 - if @ticket.blank?
   = form_tag organization_virtual_line_index_path(organization_id: current_organization.to_param), action: "create", method: "post" do
     .row
