--- a/app/javascript/packs/application_css.scss
+++ b/app/javascript/packs/application_css.scss
@@ -42,6 +42,7 @@ $primary-nav-text-color: #a4a4a4;
 
 // Styles related to appointments
 @import "../stylesheets/appointments/customer_virtual_line";
+@import "../stylesheets/appointments/organized_virtual_line";
 
 // Uppy Styles
 @import "@uppy/core/dist/style.css";
