add note about it being for administrators

--- a/app/assets/stylesheets/email.scss
+++ b/app/assets/stylesheets/email.scss
@@ -55,6 +55,7 @@ $table-list-offset-color: $email-light-bg;
 @import "revised/emails/email_components";
 @import "revised/emails/email_bike_display";
 @import "revised/emails/email_stolen_checklist";
+@import "revised/emails/admin_emails";
 @import "revised/emails/email_partners";
 @import "revised/emails/email_hot_sheet";
 
