--- a/app/assets/stylesheets/revised/emails/email_admins.scss
+++ b/app/assets/stylesheets/revised/emails/email_admins.scss
@@ -1,6 +1,6 @@
 .bike-index-administration-links {
-  @extend .uncap;
   margin-top: 30px;
   padding-top: 1rem;
-  border-top: $gray-lighter 1px solid;
+  border-top: $gray-light 1px solid;
+  opacity: 0.8;
 }
