--- a/app/views/admin/bikes/index.html.haml
+++ b/app/views/admin/bikes/index.html.haml
@@ -7,15 +7,24 @@
       %li.nav-item
         = link_to "Unknown Mnfgs", missing_manufacturer_admin_bikes_path, class: "nav-link #{@unknown ? 'active' : ''}"
       %li.nav-item
-        - stolen_active = params[:search_stolen].present?
-        = link_to "stolen", admin_bikes_path(sortable_search_params.merge(search_stolen: stolen_active ? nil : true)), class: "nav-link #{stolen_active ? 'active' : ''}"
+        %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (params[:search_stolen].present? ? "active" : "") }
+          = params[:search_stolen].present? ? params[:search_stolen].humanize : "stolenness"
+        .dropdown-menu
+          - stolen_only_active = params[:search_stolen] == 'stolen_only'
+          = link_to "Stolen only", admin_bikes_path(sortable_search_params.merge(search_stolen: stolen_only_active ? nil : "stolen_only")), class: "dropdown-item #{stolen_only_active ? 'active' : ''}"
+          - non_stolen_only_active = params[:search_stolen] == 'non_stolen_only'
+          = link_to "Non Stolen only", admin_bikes_path(sortable_search_params.merge(search_stolen: non_stolen_only_active ? nil : "non_stolen_only")), class: "dropdown-item #{non_stolen_only_active ? 'active' : ''}"
+
       - if !@user.present?
         %li.nav-item
-          - example_active = params[:search_example].present?
-          = link_to "example", admin_bikes_path(sortable_search_params.merge(search_non_example: nil, search_example: example_active ? nil : true)), class: "nav-link #{example_active ? 'active' : ''}"
-      %li.nav-item
-        - non_example_active = params[:search_non_example].present?
-        = link_to "non-example", admin_bikes_path(sortable_search_params.merge(search_example: nil, search_non_example: non_example_active ? nil : true)), class: "nav-link #{non_example_active ? 'active' : ''}"
+          %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (params[:search_example].present? ? "active" : "") }
+            = params[:search_example].present? ? params[:search_example].humanize : "exampleness"
+          .dropdown-menu
+            - example_only_active = params[:search_example] == 'example_only'
+            = link_to "Example only", admin_bikes_path(sortable_search_params.merge(search_example: example_only_active ? nil : "example_only")), class: "dropdown-item #{example_only_active ? 'active' : ''}"
+            - non_example_only_active = params[:search_example] == 'non_example_only'
+            = link_to "Non Stolen only", admin_bikes_path(sortable_search_params.merge(search_example: non_example_only_active ? nil : "non_example_only")), class: "dropdown-item #{non_example_only_active ? 'active' : ''}"
+
       %li.nav-item
         - any_origin_active = @origin_search_type.blank?
         %a.nav-link.dropdown-toggle{ href: "#", role: "button", "data-toggle" => "dropdown", "aria-haspopup" => "true", "aria-expanded" => "false", class: (any_origin_active ? "" : "active") }
