Admin recovery email improvement, bike display improvement (#1670)

--- a/app/views/admin_mailer/feedback_notification_email.html.haml
+++ b/app/views/admin_mailer/feedback_notification_email.html.haml
@@ -1,5 +1,7 @@
 / SparkPost blocks emails with URIs it disapproves of. We still want to send these emails, at least for now. So just remove urls and tags, so that sparkpost doesn't block them.
 - feedback_body = strip_tags(@feedback.body).gsub(/http[^\s]*/i, '').truncate(200)
+- admin_links = []
+
 - if @feedback.feedback_type == 'serial_update_request'
   %h1{ :style => "font-weight: 400px;" }
     Serial update notification
@@ -61,12 +63,12 @@
       Can we share?
       %strong
         = @feedback.feedback_hash["can_share_recovery"] ? "Yes" : "No"
-
-    - if @feedback.feedback_hash["can_share_recovery"]
-      %h3{ style: "font-weight: 400px;" }
-        = link_to "Approve sharing this recovery!", admin_recoveries_url
   %p
     = link_to edit_admin_bike_url(@feedback.bike), edit_admin_bike_url(@feedback.bike)
+
+
+  - if @feedback.feedback_hash["index_helped_recovery"] && @feedback.feedback_hash["can_share_recovery"]
+    - admin_links << link_to("display story", admin_recoveries_url)
 
 - elsif @feedback.lead_type.present?
   %p
@@ -107,6 +109,10 @@
   %p
     = feedback_body
 
-%p{ style: "margin-top: 30px;" }
-  %strong
-    = link_to "Read full message", admin_feedback_url(@feedback)
+%p.bike-index-administration-links
+  Bike Index administrator links:
+  - admin_links.each do |link|
+    = link
+    %span{ style: "inline-block; padding: 0 0.3rem;" }
+      \|
+  = link_to "read full message", admin_feedback_url(@feedback)
