--- a/app/views/organized/bikes/_search.html.haml
+++ b/app/views/organized/bikes/_search.html.haml
@@ -149,10 +149,9 @@
                   - if @search_stickers == "none"
                     = t(".only_not")
 
-        / I don't know how to do this in a performant way :/
-        / - if current_organization.enabled?("avery_export")
-        /   %th{ class: "avery_export_cell" }
-        /     Export
+        -# I don't know how to do this in a performant way :/
+        -# - if current_organization.enabled?("avery_export")
+        -#   %th{ class: "avery_export_cell" } Export
         - if current_organization.enabled?("impound_bikes")
           %th.hiddenColumn.hidden-xs-down.impounded_cell=t(".impounded")
     %tbody
@@ -195,14 +194,15 @@
               %td.hiddenColumn.hidden-xs-down{ class: "#{reg_field}_cell" }
                 - bike_attr = PaidFeature.reg_field_bike_attrs[reg_field.to_sym]
                 - if bike_attr == "registration_address"
-                  %small
-                    = bike.b_params.map { |bp| bp.bike["address"] }.reject(&:blank?).first
+                  - if bike.registration_address.present?
+                    %small
+                      = bike.registration_address["street"]
                 - elsif bike_attr == "organization_affiliation"
                   = bike.organization_affiliation.humanize
                 - else
                   = bike.send(bike_attr)
-            / - if current_organization.enabled?("avery_export")
-            /   %td.hiddenColumn{ class: "avery_export" }
+            -# - if current_organization.enabled?("avery_export")
+            -#   %td.hiddenColumn{ class: "avery_export" }
 
             -# All organizations can see additional serial#
             %td.hiddenColumn.hidden-xs-down{ class: "extra_registration_number_cell" }
