--- a/app/views/organized/bikes/_list.html.haml
+++ b/app/views/organized/bikes/_list.html.haml
@@ -37,7 +37,7 @@
             = bike.first_owner_email
             %small.less-strong
               - if bike.creation_description
-                = bike.creation_description
+                = origin_display(bike.creation_description)
               - unless bike.owner_email == bike.first_owner_email
                 = "(#{t('.sent_to_a_new_owner')})"
           - if @bike_sticker.present?
