--- a/app/views/admin/bikes/_bike.html.haml
+++ b/app/views/admin/bikes/_bike.html.haml
@@ -102,7 +102,8 @@
               - if bike.creation_description.present?
                 \-
                 %em
-                  Via #{bike.creation_description}
+                  Via
+                  = origin_display(bike.creation_description)
               - if bike.creation_state&.bulk_import.present?
                 %br
                 Import
