--- a/app/views/organized/impound_records/index.html.haml
+++ b/app/views/organized/impound_records/index.html.haml
@@ -4,6 +4,11 @@
   %h1
     Impound Records
 
+- if @render_chart
+  = column_chart time_range_counts(collection: available_impound_records), stacked: true, thousands: ",", defer: true
+.text-right.mb-2
+  %a.btn.btn-sm.less-strong.btn-outline-secondary{ href: organization_impound_records_path(sortable_search_params.merge(organization_id: current_organization.to_param, render_chart: !@render_chart)), class: (@render_chart ? "active" : "") }
+    Render chart
 = render partial: "/shared/period_select"
 
 .mt-4
