--- a/app/views/admin/organizations/custom_layouts/index.html.haml
+++ b/app/views/admin/organizations/custom_layouts/index.html.haml
@@ -11,7 +11,7 @@
           Paid
         %td
           %strong
-            = @organization.is_paid
+            = @organization.paid?
 
 .full-screen-table
   %table.table.table-striped.table-bordered.table-sm
