--- a/app/views/layouts/email.html.haml
+++ b/app/views/layouts/email.html.haml
@@ -52,6 +52,6 @@
         %h5
           #{Time.current.year} &copy; #{t(".bike_index")}.
 
-          - unless @organization.present? && controller_path == 'organized_mailer' && @organization.is_paid
+          - unless @organization.present? && controller_path == 'organized_mailer' && @organization.paid?
             = t(".help_prevent_theft")
             = link_to(t(".make_a_donation"), support_the_index_url)
