--- a/app/views/organized/exports/show.html.haml
+++ b/app/views/organized/exports/show.html.haml
@@ -27,7 +27,17 @@
         %td#exportProgress{ class: @export.progress, "data-createdat" => @export.created_at.to_i }
           %span{ class: export_progress_class(@export) }
             = @export.calculated_progress
-
+      - if current_organization.enabled?("show_partial_registrations")
+        %tr
+          %td= t(".registration_types")
+          %td
+            - if @export.partial_registrations == "only"
+              %strong Only incomplete
+              registrations
+            - elsif @export.partial_registrations
+              Registered bikes & incomplete registrations
+            - else
+              Only registered bikes
       %tr
         %td= t(".bikes_exported")
         %td
