Export partial bikes (#1674)

--- a/app/views/admin/organizations/show.html.haml
+++ b/app/views/admin/organizations/show.html.haml
@@ -178,10 +178,10 @@
           %td
             Paid
           %td
-            -if @organization.is_paid
+            - if @organization.paid?
               %strong
                 True
-            -else
+            - else
               - if LandingPages::ORGANIZATIONS.include?(@organization.slug)
                 %p.text-danger
                   IS NOT MARKED PAID BUT HAS A LANDING PAGE
@@ -190,7 +190,7 @@
             %em.less-strong
               Set this via #{link_to "invoices", admin_organization_invoices_path(organization_id: @organization.to_param)}
 
-        - if @organization.is_paid
+        - if @organization.paid?
           %tr
             %td Bike Search
             %td
