--- a/app/views/organized/bikes/incompletes.html.haml
+++ b/app/views/organized/bikes/incompletes.html.haml
@@ -1,12 +1,22 @@
 .organized-page-header
   %h1= t(".org_incomplete_registrations_html", org_name: current_organization.name)
 
-%p
+- if @render_chart
+  = column_chart time_range_counts(collection: @b_params_total, column: "b_params.created_at"), stacked: true, thousands: ",", defer: true
+.text-right.mb-2
+  %a.btn.btn-sm.less-strong.btn-outline-secondary{ href: incompletes_organization_bikes_path(sortable_search_params.merge(organization_id: current_organization.to_param, render_chart: !@render_chart)), class: (@render_chart ? "active" : "") }
+    Render chart
+= render partial: "/shared/period_select"
+
+%p.mt-4
   %strong
     = @b_params.total_count
     = t(".matching") if params[:query].present?
-    = t(".incomplete")
-    = pluralize(@b_params.total_count, t(".registration"))
+  = t(".incomplete")
+  = t(".registration").pluralize(@b_params.total_count)
+  %em
+    = humanized_time_range(@time_range)
+
 .mt-4.mb-2
   = form_tag incompletes_organization_bikes_path(organization_id: current_organization.to_param), method: :get do
     .row
