--- a/app/views/organized/bikes/_search.html.haml
+++ b/app/views/organized/bikes/_search.html.haml
@@ -216,7 +216,7 @@
                     = link_to t(".link"), bike_sticker_path(id: @bike_sticker.code, organization_id: @bike_sticker.organization_id, bike_id: bike.id), method: "PUT"
                 - else
                   - bike.bike_stickers.each_with_index do |bike_sticker, index|
-                    - if bike_sticker.organization.present?
+                    - if bike_sticker.organization.present? && bike_sticker.organization_id == current_organization.id
                       = link_to bike_sticker.code, edit_organization_sticker_path(id: bike_sticker.code, organization_id: bike_sticker.organization&.to_param), class: "small"
                     - else
                       %small
