--- a/app/views/admin/stolen_bikes/index.html.haml
+++ b/app/views/admin/stolen_bikes/index.html.haml
@@ -18,13 +18,13 @@
   .col-12.mt-2.mb-4
     %h4
       - if sort_column == "created_at"
-        - chart_column = "stolen_records.created_at"
+        - time_range_column = "stolen_records.created_at"
         Stolen records created
 
       - else
-        - chart_column = "stolen_records.date_stolen"
+        - time_range_column = "stolen_records.date_stolen"
         Date stolen
-    = column_chart time_range_counts(collection: available_stolen_records, column: chart_column), stacked: true, thousands: ",", defer: true
+    = column_chart time_range_counts(collection: available_stolen_records, column: time_range_column), stacked: true, thousands: ",", defer: true
 
 -# Show traditional counts unless viewing the default (only unapproved) scoped view
 - if !@unapproved_only || @render_chart
