--- a/app/views/bikes/edit_groups.html.haml
+++ b/app/views/bikes/edit_groups.html.haml
@@ -13,7 +13,7 @@
           - if @bike.bike_organizations.any?
             = hidden_field_tag :organization_ids_can_edit_claimed_present, true
             .related-fields.no-divider-row
-              - if @bike.bike_organizations.where(organization_id: @bike.creation_organization_id) && @bike.creation_organization
+              - if @bike.bike_organizations.where(organization_id: @bike.creation_organization_id).present? && @bike.creation_organization.present?
                 .form-group.row
                   %label.form-well-label
                     = t(".creation_organization")
