--- a/app/views/organized/emails/edit.html.haml
+++ b/app/views/organized/emails/edit.html.haml
@@ -53,7 +53,7 @@
           %em.less-strong.d-block{ style: "line-height: 1;" }
             Need help with HTML? Check out
             = link_to "this tutorial", "https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Getting_started"
-            \- or email #{link_to "lily@bikeindex.org", "mailto:lily@bikeindex.org"} for help.
+            \- or email #{link_to "lily@bikeindex.org", "mailto:lily@bikeindex.org"}.
       = f.text_area :body, rows: 4, placeholder: "Custom text", class: "form-control"
 
     .form-group
